		Added cheat button to grow map resources.
		Fixed units staying selected and contributing to control groups when becoming cloaked or hidden in fog.
		Swapped the cursors used for sabotaging and capturing buildings/units.
		Added Ctrl+T shortcut for selection of all units matching the types of the currently selected ones across the screen and map.
	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.
		Added randomized tiles for Sand and Rock terrain.
		Shroud is now displayed by default again (disable it in the lobby settings).
		Removed the build radius restrictions.
		Added the BLOXXMAS terrain tiles from the 1.06 patch.
		Saboteur can now plant C4 on vehicles.
	Red Alert:
		Transports will now open their doors when at shore.
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
		Fixed dinosaurs not being able to collect crates.
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
		Added support for rectangular cells with forced perspective.
		Added initial support for Tmp(TS) sprites.
		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
		Added support for crates to level up specific unit upgrades.