@@ -49,6 +49,7 @@ Also thanks to:
     * Maarten Meuris (Nyerguds)
     * Mark Olson (markolson)
     * Matthew Gatland (mgatland)
+    * Matthew Uzzell (MUzzell)
     * Max621
     * Max Ugrumov (katzsmile)
     * Nukem
