@@ -199,6 +199,44 @@ Background@KICK_CLIENT_DIALOG:
 			Height:25
 			Text:Cancel
 			Font:Bold
+			
+Background@KICK_SPECTATORS_DIALOG:
+	X:15
+	Y:30
+	Width:501
+	Height:219
+	Logic:KickSpectatorsLogic
+	Background:scrollpanel-bg
+	Children:
+		Label@TITLE:
+			X:0
+			Y:40
+			Width:PARENT_RIGHT
+			Height:25
+			Font:Bold
+			Align:Center
+			Text:Kick Spectators
+		Label@TEXT:
+			X:0
+			Y:85
+			Width:PARENT_RIGHT
+			Height:25
+			Font:Regular
+			Align:Center
+		Button@OK_BUTTON:
+			X:(PARENT_RIGHT - WIDTH)/2 + 75
+			Y:155
+			Width:120
+			Height:25
+			Text:Ok
+			Font:Bold
+		Button@CANCEL_BUTTON:
+			X:(PARENT_RIGHT - WIDTH)/2 - 75
+			Y:155
+			Width:120
+			Height:25
+			Text:Cancel
+			Font:Bold
 
 Background@LOBBY_OPTIONS_BIN:
 	X:15
